logs/jiupin-utils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jiupin_utils'...
Listing './lib/python3.5/site-packages/jiupin_utils/cache'...
Listing './lib/python3.5/site-packages/jiupin_utils/cmd_parser'...
Compiling './lib/python3.5/site-packages/jiupin_utils/cmd_parser/cmd_parser_v1.py'...
***   File "./lib/python3.5/site-packages/jiupin_utils/cmd_parser/cmd_parser_v1.py", line 39
    print "捡到一个:|" + cmd_str[i] + "|"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jiupin_utils/file_helper'...
Listing './lib/python3.5/site-packages/jiupin_utils/folder_helper'...
Listing './lib/python3.5/site-packages/jiupin_utils/mongo_db_helper'...
Listing './lib/python3.5/site-packages/jiupin_utils/mysql_db_helper'...
Compiling './lib/python3.5/site-packages/jiupin_utils/mysql_db_helper/mysql_db_helper_v1.py'...
***   File "./lib/python3.5/site-packages/jiupin_utils/mysql_db_helper/mysql_db_helper_v1.py", line 29
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jiupin_utils/oss_client'...
Compiling './lib/python3.5/site-packages/jiupin_utils/oss_client/oss_client_v1.py'...
***   File "./lib/python3.5/site-packages/jiupin_utils/oss_client/oss_client_v1.py", line 29
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jiupin_utils/return_result'...
Listing './lib/python3.5/site-packages/jiupin_utils/sqlite_db_helper'...
Compiling './lib/python3.5/site-packages/jiupin_utils/sqlite_db_helper/sqlite_db_helper_v1.py'...
***   File "./lib/python3.5/site-packages/jiupin_utils/sqlite_db_helper/sqlite_db_helper_v1.py", line 30
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jiupin_utils/time_helper'...
Compiling './lib/python3.5/site-packages/jiupin_utils/time_helper/time_helper_v1.py'...
***   File "./lib/python3.5/site-packages/jiupin_utils/time_helper/time_helper_v1.py", line 23
    print diff
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jiupin_utils/val'...
Compiling './lib/python3.5/site-packages/jiupin_utils/val/vali_input_v1.py'...
***   File "./lib/python3.5/site-packages/jiupin_utils/val/vali_input_v1.py", line 53
    print kwargs
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jiupin_utils-1.0.25.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
